# snipdoc

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  snipdoc-config.yml
.github/workflows/: ci.yml  (+1 more)
snipdoc/: Cargo.toml  snipdoc.yml
snipdoc/examples/inject/: code.md  snipdoc.yaml  snipdoc.yml
snipdoc/src/: cli.rs  config.rs  errors.rs  lib.rs  processor.rs  read_file.rs  snippet.pest  walk.rs
snipdoc/src/db/: code.rs  mod.rs  yaml.rs
snipdoc/src/db/snapshots/: snipdoc__db__code__tests__can_load.snap  snipdoc__db__tests__can_get_snippet_content_with_add_prefix_action.snap  snipdoc__db__tests__can_get_snippet_content_with_combination_action.snap  snipdoc__db__tests__can_get_snippet_content_with_strip_prefix_action.snap  snipdoc__db__tests__can_get_snippet_content_with_template_action.snap  snipdoc__db__tests__can_get_snippet_content_without_action.snap  snipdoc__db__tests__can_get_snippet_with_exec_action_with_template.snap  (+2 more)
snipdoc/src/parser/: collector.rs  html_tag.rs  injector.rs  mod.rs
snipdoc/src/reporters/: console.rs  mod.rs  table.rs
snipdoc/src/snapshots/: snipdoc__walk__tests__can_exclude_files.snap  snipdoc__walk__tests__can_walk_with_excludes.snap  snipdoc__walk__tests__can_walk_with_includes.snap  snipdoc__walk__tests__can_walk_with_mix.snap
snipdoc/src/tests_cfg/: cleanup.rs  mod.rs  redact.rs
snipdoc/tests/: cli_tests.rs
snipdoc/tests/cmd/: check-in-valid.trycmd  check-valid.trycmd  create-db-empty.trycmd  create-db.trycmd  main.trycmd  run-dry-run.trycmd  run.trycmd  show.trycmd
snipdoc/tests/exec-feature/: run.trycmd
(+46 files in other folders)
