[package]
name = "snipdoc"
version = "0.1.0"
edition = "2021"
readme = "../README.md"
repository = "https://github.com/kaplanelad/snipdoc"
description = "Code Documentation Made Simple"
license = "Apache-2.0"
homepage = "https://github.com/kaplanelad/snipdoc"
documentation = "https://docs.rs/snipdoc"
authors = ["Elad-Kaplan <kaplan.elad@gmail.com>"]

[dependencies]
# Parser
pest = "2.7.10"
pest_derive = "2.7.10"
scraper = "0.19.0"
# Logging
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.16", features = [
    "env-filter",
], optional = true }

regex = { version = "1.10.3" }
ignore = { version = "0.4.22" }
rayon = { version = "1.10.0" }
thiserror = { version = "1.0.61" }
serde = { version = "1.0.202", features = ["derive"] }
serde_yaml = { version = "0.9.33" }
serde_regex = { version = "1.1.0" }

# Cli
clap = { version = "4.5.2", features = ["std", "derive"], optional = true }

# reporters
tabled = { version = "0.15.0", optional = true }
console = { version = "0.15.8", optional = true }

[features]
default = ["cli"]

cli = ["dep:clap", "dep:tracing-subscriber", "reporters"]
reporters = ["dep:console", "dep:tabled"]

[[bin]]
name = "snipdoc"
required-features = ["cli"]

[dev-dependencies]
insta = { version = "1.36.1", features = ["redactions", "filters"] }
tree-fs = { version = "0.1.0" }
trycmd = "0.15.0"
